编译方式升级暂提

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 *.iml
-.DS_Store
 .gradle
-
-/.idea
-/build
-/publish.sh
 /local.properties
-/gradle.properties
-/library/build
-/library/build
-/sample/build
-/test/build
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
